gravatar spacing fixed

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -155,6 +155,11 @@ aside {
   margin-top: -5px;
 }
 
+
+a.dropdown-toggle { //Espaço entre gravatar e dropdown
+  height: 50px;
+}
+
 /* forms */
 
 input, textarea, select, .uneditable-input {
